# subtreactional-vst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/patches/: juce-remove-cgwindowlist.patch
.github/workflows/: build.yml
Source/: JuceBridge.cpp  JuceBridge.h  NativeDarkCover.h  NativeDarkCover.mm  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
patches/: juce_no_white_flash.patch  juce_webview2_execute_script.patch  juce_webview2_static_link.patch
presets/Bass/: Acid Bass.json  Reese Bass.json  Sub Bass.json  Wobble Bass.json
presets/Lead/: Dirty Lead.json  Mono Lead.json  PWM Lead.json  Supersaw Lead.json
presets/Pad/: Atmospheric Pad.json  Noise Pad.json  String Pad.json  Warm Pad.json
presets/Pluck/: Harp.json  Metallic Pluck.json  Pluck.json  Rhodes Pluck.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: assets.d.ts  bridge.ts  main.ts
